--- a/HTBCH/(public)/styles/style.css
+++ b/HTBCH/(public)/styles/style.css
@@ -1,70 +1,64 @@
-body {font-family: Arial, Helvetica, sans-serif;}
-* {box-sizing: border-box;}
-
-/* Button used to open the contact form - fixed at the bottom of the page */
-.open-button {
-  background-color: #555;
-  color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  opacity: 0.8;
-  position: fixed;
-  bottom: 23px;
-  right: 28px;
-  width: 280px;
-}
-
-/* The popup form - hidden by default */
-.form-popup {
-  display: none;
-  position: fixed;
-  bottom: 0;
-  right: 15px;
-  border: 3px solid #f1f1f1;
-  z-index: 9;
-}
-
-/* Add styles to the form container */
-.form-container {
-  max-width: 300px;
-  padding: 10px;
+body{
+  font-family:Arial, Helvetica, sans-serif;
   background-color: white;
+  margin: 2rem;
+  background-image: url("https://images.pexels.com/photos/4008708/pexels-photo-4008708.jpeg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;  
+  background-size: cover;
 }
 
-/* Full-width input fields */
-.form-container input[type=text], .form-container input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  border: none;
-  background: #f1f1f1;
+.siteWrapper{
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
 }
 
-/* When the inputs get focus, do something */
-.form-container input[type=text]:focus, .form-container input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
+.logo {
+  size: 300%;
+ }
+
+.question{
+  font-weight: bold;
+  color: #15d;
 }
 
-/* Set a style for the submit/login button */
-.form-container .btn {
-  background-color: #4CAF50;
+.form-container{
+  background-color: white;
+  padding: .5em;
+  height: 50%;
+  width: 40%;
+  border-radius: 1em;
+  align-content: space-between;
+}
+
+.form-body {
+  display: flex;
+  flex-direction: column;
+  text-align: left; 
+  justify-content: space-evenly;
+  padding: 2rem;
+}
+
+.dropdown-container{
+ display: flex;
+ flex-direction: column;
+ padding: 1rem 1rem 1rem 0;
+ width: 50%;
+}
+
+.next {
+  background-color:#6dbe45;
   color: white;
-  padding: 16px 20px;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  margin-bottom:10px;
-  opacity: 0.8;
 }
 
-/* Add a red background color to the cancel button */
-.form-container .cancel {
-  background-color: red;
+.button {
+  text-decoration: none;
+  display: inline-block;
+  padding: 8px 16px;
 }
 
-/* Add some hover effects to buttons */
-.form-container .btn:hover, .open-button:hover {
-  opacity: 1;
+.button:hover {
+  background-color:#3e7160;
+  color: black;
 }
