--- a/GXP/public/styles/style.css
+++ b/GXP/public/styles/style.css
@@ -3,15 +3,73 @@ body {
     margin: 0%;
     width: 100vw;
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    align-content: center;
+}
+
+.main {
+    width: 100%;
+    height: 50%;
 }
 
 h2 {
     font-family: 'Long Cang', cursive;
-    display: flex;
-    justify-self: center;
+    text-align: center;
+    font-size: 2rem;
+}
+
+
+a {
+	color: #000;
+	text-decoration: none;
+}
+.container{
+	position: relative;
+	text-align: center;
+}
+
+.container > header {
+	padding: 30px 30px 10px 20px;
+	margin: 0px 20px 10px 20px;
+	position: relative;
+	display: block;
+	text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
+    text-align: left;
+}
+
+.header-bar{
+	font-family: Arial, sans-serif;
+	line-height: 1.5rem;
+	font-size: .8rem;
+	width: 100%;
+	background: #000;
+	opacity: 0.9;
+	text-transform: uppercase;
+	z-index: 9999;
+	position: relative;
+	-moz-box-shadow: 1px 0px 2px #000;
+	-webkit-box-shadow: 1px 0px 2px #000;
+	box-shadow: 1px 0px 2px #000;
+}
+.header-bar a{
+	padding: 0rem 0.8rem;
+	letter-spacing: .1rem;
+	color: #000;
+	display: block;
+	float: left;
+}
+.header-bar a:hover{
+    color: #222;
+    text-decoration: underline;
+}
+.header-bar span.nav{
+	float: right;
+}
+.header-bar span.nav a{
+	float: none;
+	display: inline;
+}
+
+@media screen and (max-width: 767px) {
+	.container > header{
+		text-align: center;
+	}
 }
