updated styling of consult page

--- a/GXP/public/styles/consult.css
+++ b/GXP/public/styles/consult.css
@@ -11,6 +11,15 @@ body {
     height: 50%;
 }
 
+.heading {
+    font-family: 'Long Cang', cursive;
+    text-align: center;
+    font-size: 2rem;
+    color: #FFF;
+    padding-top: 3rem;
+    padding-bottom: 0;
+}
+
 a {
 	color: #FFF;
 	text-decoration: none;
